# Condottiere-

./: CMakeLists.txt  CMakePresets.json  Condottiere.qmlproject  Condottiere.qmlproject.qtds  Help.cpp  Help.h  Help.ui  Helpspage.cpp  Helpspage.h  Playerinfo.cpp  Playerinfo.h  Playerinfo.ui  README.md  Set.cpp  Set.h  Set.ui  Sound.qrc  Test.txt  Warwinner.cpp  Warwinner.h  Warwinner.ui  all.cpp  campaign.cpp  campaign.h  campaign.ui  condottiere.cpp  controller.cpp  controller.h  data.qrc  gamesinfo.h  gamesinfo.ui  gamewinner.cpp  gamewinner.h  gamewinner.ui  help.cpp  help.h  help.ui  img.qrc  loadgames.cpp  loadgames.h  (+42 more)
Condottiere/: CMakeLists.txt  main.cpp
Description/: Assets.rar
Description/Graphics/photos/: fairy-tale-castle-hd-8k-wallpaper-stock-photographic-image_853645-59431.avif  mars-planet-style-concept-space-fantastic-planet-surface-rocky-mountains-background-against-night-sky-with-stars-shining-bright-horizon-generative-ai_1423-10194.avif
Description/photo/: images.jfif
build-linux/: CMakeCache.txt  Condottiere  Makefile  cmake_install.cmake
build-windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Condottiere.sln  Condottiere.vcxproj  Condottiere.vcxproj.filters  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  compile_commands.json
build-windows/.cmake/api/v1/reply/: cache-v2-8fae44f06bdaaebd260b.json  cmakeFiles-v1-e1cbecc405b66a2f783d.json  codemodel-v2-58dab5f46f6a7f4a9369.json  index-2024-06-13T06-55-08-0978.json  target-Condottiere-Debug-feebd1808abea1383af6.json
content/: Screen01.ui.qml
data/board/: adjacency.txt
data/help/: BishopHelp.txt  DrummerHelp.txt  GameHelp.txt  HeroineHelp.txt  ScarecrowHelp.txt  ShirinAghlHelp.txt  SpringHelp.txt  SpyHelp.txt  TurncoatHelp.txt  WhiterakhshHelp.txt  WhitesealsHelp.txt  WinterHelp.txt
imports/: CMakeLists.txt
imports/Condottiere/: CMakeLists.txt  qmldir
imports/Condottiere/designer/: plugin.metainfo
inc/: bishop.h  enumcolor.h  filepath.h  game.h  gameboard.h  player.h  season.h  spring.h  spy.h  state.h  userinterface.h
inc/card/: ShirinAghl.h  bishop.h  card.h  drummer.h  heroine.h  purplecard.h  scarecrow.h  season.h  spring.h  spy.h  turncoat.h  whiterakhsh.h  whiteseals.h  winter.h  yellowcard.h
inc/marker/: battlemarker.h  favormarker.h  marker.h  playermarker.h
include/: battlemarker.h  card.h  drummer.h  game.h  gameboard.h  heroine.h  player.h  purplecard.h  spring.h  state.h  userinterface.h  winter.h
include/cards/: Bishop.h  Card.h  Drummer.h  Heroine.h  PurpleCard.h  Spring.h  Spy.h  YellowCard.h  bishop.h  card.h  drummer.h  heroine.h  purplecard.h  scarecrow.h  season.h  spring.h  spy.h  turncoat.h  winter.h  yellowcard.h
include/marker/: BattleMarker.h  FavorMarker.h  Marker.h  PlayerMarker.h  favormarker.h  marker.h  playermarker.h
src/: CMakeCache.txt  battlemarker.cpp  bishop.cpp  card.cpp  favormarker.cpp  game.cpp  gameBoard.cpp  gameboard.cpp  heroine.cpp  import_qml_plugins.h  main.cpp  player.cpp  playermarker.cpp  scarecrow.cpp  season.cpp  spring.cpp  spy.cpp  state.cpp  turncoat.cpp  userinterface.cpp  winter.cpp
src/Marker/: BattleMarker.cpp  Marker.cpp
src/card/: ShirinAghl.cpp  bishop.cpp  card.cpp  drummer.cpp  heroine.cpp  purplecard.cpp  scarecrow.cpp  season.cpp  spring.cpp  spy.cpp  turncoat.cpp  whiterakhsh.cpp  whiteseals.cpp  winter.cpp  yellowcard.cpp
src/cards/: bishop.cpp  drummer.cpp  heroine.cpp  purplecard.cpp  scarecrow.cpp  season.cpp  spring.cpp  spy.cpp  turncoat.cpp  winter.cpp  yellowcard.cpp
src/marker/: battlemarker.cpp  favormarker.cpp  marker.cpp  playermarker.cpp
workReport/: WorkReport.aux  WorkReport.fdb_latexmk  WorkReport.fls  WorkReport.out  WorkReport.tex  WorkReport.toc  WorkReport.xdv
workReport/Graphics/: war.jfif
